// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expense list with empty expenses 1`] = `
<div>
  <div
    class="content-container"
  >
    <div
      class="list-header"
    >
      <div
        class="show-for-mobile"
      >
        Expenses
      </div>
      <div
        class="show-for-desktop"
      >
        Expense
      </div>
      <div
        class="show-for-desktop"
      >
        Amount
      </div>
    </div>
    <div
      class="list-body"
    >
      <div
        class="list-item list-item--message"
      >
        <span>
          No Expenses
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render expense list with expenses 1`] = `
<div>
  <div
    class="content-container"
  >
    <div
      class="list-header"
    >
      <div
        class="show-for-mobile"
      >
        Expenses
      </div>
      <div
        class="show-for-desktop"
      >
        Expense
      </div>
      <div
        class="show-for-desktop"
      >
        Amount
      </div>
    </div>
    <div
      class="list-body"
    >
      <a
        class="list-item"
        href="/edit/1"
      >
        <div
          class="list-item__div"
        >
          <h3
            class="list-item__title"
          >
            Gum
          </h3>
          <span
            class="list-item__sub-title"
          >
            January 1st, 1970
          </span>
        </div>
        <h3
          class="list-item__data"
        >
          Rs. 140.00
        </h3>
      </a>
      <a
        class="list-item"
        href="/edit/2"
      >
        <div
          class="list-item__div"
        >
          <h3
            class="list-item__title"
          >
            Rent
          </h3>
          <span
            class="list-item__sub-title"
          >
            December 28th, 1969
          </span>
        </div>
        <h3
          class="list-item__data"
        >
          Rs. 14,000.94
        </h3>
      </a>
      <a
        class="list-item"
        href="/edit/3"
      >
        <div
          class="list-item__div"
        >
          <h3
            class="list-item__title"
          >
            Credit
          </h3>
          <span
            class="list-item__sub-title"
          >
            January 5th, 1970
          </span>
        </div>
        <h3
          class="list-item__data"
        >
          Rs. 113,221.80
        </h3>
      </a>
    </div>
  </div>
</div>
`;
